--- a/extension/about.html
+++ b/extension/about.html
@@ -12,7 +12,13 @@
 <body class="body-about">
     <div class="content-main">
         <div class="icon"></div>
-        <h1 class="title-about title">Yandex Music Control</h1>
+        <div class="github-btn">
+            <h1 class="title-about title">Yandex Music Control</h1>
+            <div class="btn">
+                <a href="https://github.com/Night-Soft/ControlYandexMusic">GitHub</a>
+                <img src="../img/github.svg">
+            </div>
+        </div>
 
         <div class="content-about">
             <div class="control-about">
