--- a/extension/popup.html
+++ b/extension/popup.html
@@ -17,6 +17,20 @@
         <div class="notification-time-left"></div>
         <div class="close-notification"></div>
     </div>
+
+    <div class="popup-gotab-container">
+        <div class="popup-go-tab-btn-content">
+            <svg class="go-tab" width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path class="svg-main-color" fill-rule="evenodd" clip-rule="evenodd"
+                    d="M30.9697 2.61523C31.2687 2.61523 31.5701 2.64719 31.8633 2.71973L31.8643 2.71875C32.0519 2.75784 32.2342 2.80905 32.4189 2.87598L32.6055 2.94824L32.6074 2.94922L32.7852 3.03125C32.9015 3.08799 33.0145 3.14941 33.123 3.21387L33.2822 3.3125L33.2861 3.31445L33.4551 3.43457C33.5662 3.51727 33.6745 3.60538 33.7803 3.69824L33.9375 3.8418L33.9434 3.84766L34.0859 4.00293C34.1786 4.10692 34.267 4.21383 34.3506 4.32715L34.4727 4.50195L34.5713 4.66211C34.6681 4.82503 34.758 4.99848 34.8359 5.17773C34.9414 5.42034 35.0146 5.67158 35.0664 5.91992L35.1084 6.1377C35.1463 6.35861 35.1699 6.5864 35.1699 6.81543V26.3047C35.1699 27.15 34.4924 27.8152 33.6504 27.8154C32.8065 27.8154 32.1397 27.1485 32.1396 26.3047V12.1855C32.1396 11.7641 32.0377 11.4828 31.8594 11.2949C31.6715 11.117 31.3905 11.0156 30.9697 11.0156H19.5498C18.9795 11.0156 18.4371 10.9107 17.9443 10.7012C17.5058 10.5184 17.1079 10.2645 16.7441 9.93262L16.5898 9.78516L13.0498 6.24512C12.8456 6.04089 12.6242 5.89418 12.3857 5.79297L12.1982 5.72754C12.0077 5.67184 11.808 5.64551 11.5898 5.64551H5.01953C4.59874 5.64558 4.31773 5.74679 4.12988 5.9248C3.95169 6.11273 3.84961 6.39425 3.84961 6.81543V29.1855C3.8497 29.6004 3.95372 29.8893 4.12988 30.0654C4.31701 30.2525 4.59674 30.3554 5.01953 30.3555H26.0303C26.864 30.3556 27.54 31.0314 27.54 31.8652C27.5399 32.6454 26.9471 33.2984 26.1846 33.377L26.0303 33.3848L5.01953 33.375C4.44905 33.3749 3.90717 33.2718 3.41602 33.0732L3.41504 33.0723C2.97498 32.8889 2.57685 32.6261 2.20801 32.2939L2.05176 32.1465L2.0498 32.1455C1.64497 31.7407 1.34175 31.2923 1.13281 30.791C0.922808 30.2968 0.830134 29.7531 0.830078 29.1855V6.81543C0.830078 6.23679 0.923062 5.70382 1.13281 5.2002L1.13379 5.19824L1.21582 5.0166C1.41907 4.59654 1.69488 4.20878 2.04785 3.84668L2.05176 3.84375L2.20801 3.69727C2.57758 3.36631 2.97471 3.11157 3.41309 2.92871L3.60059 2.85547C4.04248 2.69507 4.52032 2.61528 5.01953 2.61523H30.9697ZM18.7295 7.64453L18.8193 7.72656C18.8791 7.77694 18.9397 7.81925 19.0029 7.85254L19.1084 7.89941L19.2119 7.9375C19.3174 7.96984 19.4295 7.98534 19.5498 7.98535H30.9697C31.382 7.98535 31.7685 8.03581 32.1396 8.14258V6.81543C32.1396 6.71446 32.1309 6.62217 32.1074 6.54395L32.1035 6.53223L32.1016 6.51953C32.0947 6.4718 32.0766 6.43162 32.0518 6.3584C32.0269 6.30133 31.9938 6.2417 31.959 6.18945L31.9561 6.18555C31.9112 6.11378 31.8587 6.04424 31.7998 5.98535C31.7409 5.92647 31.6714 5.87396 31.5996 5.8291L31.5957 5.82715C31.5431 5.79209 31.4832 5.7573 31.4258 5.73242C31.3532 5.70779 31.3131 5.69038 31.2656 5.68359L31.2529 5.68164L31.2412 5.67773C31.163 5.65426 31.0707 5.64551 30.9697 5.64551H16.7217L18.7295 7.64453Z"
+                    fill="#FF3333" />
+                <path class="svg-main-color" fill-rule="evenodd" clip-rule="evenodd"
+                    d="M24.0195 13.9248C24.8634 13.9248 25.5303 14.5917 25.5303 15.4355C25.53 16.2792 24.8632 16.9453 24.0195 16.9453H20.0605L33.5898 30.4648L33.6953 30.5811C34.1842 31.1787 34.1488 32.0465 33.5898 32.6055C33.0307 33.1643 32.163 33.1992 31.5654 32.71L31.4502 32.6055L17.9297 19.085V23.0352C17.9296 23.8889 17.2639 24.5546 16.4102 24.5547C15.5655 24.5547 14.9005 23.8882 14.9004 23.0352V15.4355C14.9004 14.5917 15.5663 13.9248 16.4102 13.9248H24.0195Z"
+                    fill="#FF3333" />
+            </svg>
+        </div>
+        </div>
+
     <div class="modal ">
         <div class="image-container">
             <img class="modal-cover"></img>
@@ -51,87 +65,92 @@
                         <div class="slider-groove-current slider-groove-current-volume"></div>
                     </div>
                     <div class="handle-toltip">
-                        <div class="slider-toltip"></div>
-                        <div class="slider-handle"></div>
+                        <div class="slider-toltip slider-toltip-volume "></div>
+                        <div class="slider-handle handle-volume"></div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="groove-box">
-        <div class="groove-content">
-            <div class="slider-content slider-content-popup">
+
+    <div class="controls-container">
+        <div class="controls-overlay">
+            <div class="progress"></div>
+        </div>
+        <div class="controls-content">
+            <div class="slider-content progress-content">
                 <span class="current-time">00:00</span>
                 <div class="slider  slider-progress slider-progress-popup">
                     <div class="slider-groove slider-groove-progress">
                         <div class="loading-bar"></div>
                         <div class="loading-waiting-bar"></div>
                         <div class="slider-groove-current slider-groove-current-progress"></div>
+                        <div class="slider-handle progress-handle"></div>
                     </div>
                     <div class="handle-toltip">
                         <div class="slider-toltip"></div>
-                        <div class="slider-handle progress-handle"></div>
                     </div>
                 </div>
                 <span class="duration">00:00</span>
             </div>
+    
+            <div class="content content-btn">
+                <div id="Previous" class="control control-popup">
+                    <svg class="svg-prev" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path class="svg-outside-color"
+                            d="M9.87305 2C8.28631 2 7 3.28631 7 4.87305V94.8552C7 96.442 8.28631 97.7283 9.87305 97.7283H28.3864C29.9731 97.7283 31.2594 96.442 31.2594 94.8552V55.5467L84.6826 91.143C86.485 92.3439 88.802 92.4555 90.7114 91.4333C92.6208 90.4111 93.8127 88.4211 93.8127 86.2553V12.8734C93.8127 10.7076 92.6208 8.71751 90.7114 7.69532C88.802 6.67313 86.485 6.7847 84.6826 7.98563L31.2594 43.582V4.87305C31.2594 3.28631 29.9731 2 28.3864 2H9.87305Z"
+                            fill="#FFCC00"></path>
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M13.5768 13.6399C13.5768 10.366 15.9125 7.41955 19.1297 7.41955C22.347 7.41955 24.6826 10.366 24.6826 13.6399V86.0883C24.6826 89.3622 22.347 92.3087 19.1297 92.3087C15.9125 92.3087 13.5768 89.3622 13.5768 86.0883V13.6399Z"
+                            fill="white" fill-opacity="0.941176"></path>
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M79.4562 71.0903C79.9284 70.8359 80.2229 70.3428 80.2229 69.8063L80.2229 29.9215C80.2229 29.3851 79.9284 28.8919 79.4561 28.6375C78.9839 28.3831 78.4101 28.4085 77.9621 28.7036L47.6925 48.646C47.2829 48.9159 47.0364 49.3735 47.0364 49.8639C47.0364 50.3544 47.2829 50.812 47.6925 51.0818L77.9621 71.0242C78.4101 71.3193 78.9839 71.3447 79.4562 71.0903Z"
+                            fill="white" fill-opacity="0.941176"></path>
+                    </svg>
+                </div>
+                <div id="Pause" class="pause control control-popup">
+                    <svg class="svg-play" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path class="svg-outside-color" fill-rule="evenodd" clip-rule="evenodd"
+                            d="M93.488 57.8047C99.496 54.3359 99.496 45.6641 93.488 42.1953L22.5181 1.22083C16.51 -2.24791 9 2.08801 9 9.02549V90.9745C9 97.912 16.51 102.248 22.5181 98.7792L93.488 57.8047ZM58.5663 51.9512C60.0683 51.084 60.0683 48.916 58.5663 48.0488L34.9097 34.3907C33.4076 33.5235 31.5301 34.6075 31.5301 36.3418V63.6582C31.5301 65.3925 33.4076 66.4765 34.9097 65.6093L58.5663 51.9512Z"
+                            fill="#FFCC00"></path>
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M83.9127 50.9756C84.6637 50.542 84.6637 49.458 83.9127 49.0244L21.3916 12.9278C20.6406 12.4942 19.7018 13.0362 19.7018 13.9034V86.0966C19.7018 86.9638 20.6406 87.5058 21.3916 87.0722L83.9127 50.9756ZM70.9579 51.3879C72.4599 50.5207 72.4599 48.3528 70.9579 47.4856L27.869 22.6082C26.367 21.741 24.4895 22.825 24.4895 24.5594V74.3141C24.4895 76.0485 26.367 77.1325 27.869 76.2653L70.9579 51.3879Z"
+                            fill="white"></path>
+                    </svg>
+                    <svg class="svg-pause" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path class="svg-outside-color" fill-rule="evenodd" clip-rule="evenodd"
+                            d="M55.0002 9.9095C55.0002 4.43663 59.4368 0 64.9097 0H75.0903C80.5632 0 84.9998 4.43663 84.9998 9.9095V90.0901C84.9998 95.563 80.5632 99.9996 75.0903 99.9996H64.9097C59.4368 99.9996 55.0002 95.563 55.0002 90.0901V9.9095Z"
+                            fill="#FFCC00"></path>
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M62 12.9871C62 9.68039 64.6806 6.99979 67.9873 6.99979H72.0127C75.3194 6.99979 78 9.68039 78 12.9871V87.0125C78 90.3192 75.3194 92.9998 72.0127 92.9998H67.9873C64.6806 92.9998 62 90.3192 62 87.0125V12.9871Z"
+                            fill="#FFFEFF"></path>
+                        <path class="svg-outside-color" fill-rule="evenodd" clip-rule="evenodd"
+                            d="M15 9.9097C15 4.43683 19.4366 0.000198364 24.9095 0.000198364H35.0901C40.563 0.000198364 44.9996 4.43683 44.9996 9.9097V90.0903C44.9996 95.5632 40.563 99.9998 35.0901 99.9998H24.9095C19.4366 99.9998 15 95.5632 15 90.0903V9.9097Z"
+                            fill="#FFCC00"></path>
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M21.9998 12.9873C21.9998 9.68058 24.6804 6.99999 27.9871 6.99999H32.0125C35.3192 6.99999 37.9998 9.68058 37.9998 12.9873V87.0127C37.9998 90.3194 35.3192 93 32.0125 93H27.9871C24.6804 93 21.9998 90.3194 21.9998 87.0127V12.9873Z"
+                            fill="#FFFEFF"></path>
+                    </svg>
+                </div>
+                <div id="Next" class="next control control-popup">
+                    <svg class="svg-next" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path class="svg-outside-color"
+                            d="M90.9397 2C92.5264 2 93.8127 3.28631 93.8127 4.87305V94.8552C93.8127 96.442 92.5264 97.7283 90.9397 97.7283H72.4263C70.8396 97.7283 69.5533 96.442 69.5533 94.8552V55.5467L16.1301 91.143C14.3278 92.3439 12.0108 92.4555 10.1014 91.4333C8.19196 90.4111 7.00005 88.4211 7.00005 86.2553V12.8734C7.00005 10.7076 8.19196 8.71751 10.1014 7.69532C12.0108 6.67313 14.3278 6.7847 16.1301 7.98563L69.5533 43.582V4.87305C69.5533 3.28631 70.8396 2 72.4263 2H90.9397Z"
+                            fill="#FFCC00"></path>
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M87.2359 13.6399C87.2359 10.366 84.9003 7.41955 81.683 7.41955C78.4657 7.41955 76.1301 10.366 76.1301 13.6399V86.0883C76.1301 89.3622 78.4657 92.3087 81.683 92.3087C84.9003 92.3087 87.2359 89.3622 87.2359 86.0883V13.6399Z"
+                            fill="white" fill-opacity="0.941176"></path>
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M21.3566 71.0903C20.8843 70.8359 20.5898 70.3428 20.5898 69.8063L20.5898 29.9215C20.5898 29.3851 20.8843 28.8919 21.3566 28.6375C21.8289 28.3831 22.4027 28.4085 22.8506 28.7036L53.1203 48.646C53.5298 48.9159 53.7763 49.3735 53.7763 49.8639C53.7763 50.3544 53.5298 50.812 53.1203 51.0818L22.8506 71.0242C22.4027 71.3193 21.8289 71.3447 21.3566 71.0903Z"
+                            fill="white" fill-opacity="0.941176"></path>
+                    </svg>
+                </div>
+                <div class="like control control-popup"></div>
+                <div class="dislike control control-popup"></div>
+            </div>
         </div>
     </div>
-
-    <div class="content">
-        <div id="Previous" class="control control-popup">
-            <svg class="svg-prev" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path class="svg-outside-color"
-                    d="M9.87305 2C8.28631 2 7 3.28631 7 4.87305V94.8552C7 96.442 8.28631 97.7283 9.87305 97.7283H28.3864C29.9731 97.7283 31.2594 96.442 31.2594 94.8552V55.5467L84.6826 91.143C86.485 92.3439 88.802 92.4555 90.7114 91.4333C92.6208 90.4111 93.8127 88.4211 93.8127 86.2553V12.8734C93.8127 10.7076 92.6208 8.71751 90.7114 7.69532C88.802 6.67313 86.485 6.7847 84.6826 7.98563L31.2594 43.582V4.87305C31.2594 3.28631 29.9731 2 28.3864 2H9.87305Z"
-                    fill="#FFCC00" />
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M13.5768 13.6399C13.5768 10.366 15.9125 7.41955 19.1297 7.41955C22.347 7.41955 24.6826 10.366 24.6826 13.6399V86.0883C24.6826 89.3622 22.347 92.3087 19.1297 92.3087C15.9125 92.3087 13.5768 89.3622 13.5768 86.0883V13.6399Z"
-                    fill="white" fill-opacity="0.941176" />
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M79.4562 71.0903C79.9284 70.8359 80.2229 70.3428 80.2229 69.8063L80.2229 29.9215C80.2229 29.3851 79.9284 28.8919 79.4561 28.6375C78.9839 28.3831 78.4101 28.4085 77.9621 28.7036L47.6925 48.646C47.2829 48.9159 47.0364 49.3735 47.0364 49.8639C47.0364 50.3544 47.2829 50.812 47.6925 51.0818L77.9621 71.0242C78.4101 71.3193 78.9839 71.3447 79.4562 71.0903Z"
-                    fill="white" fill-opacity="0.941176" />
-            </svg>
-        </div>
-        <div id="Pause" class="pause control control-popup">
-            <svg class="svg-play" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path class="svg-outside-color" fill-rule="evenodd" clip-rule="evenodd"
-                    d="M93.488 57.8047C99.496 54.3359 99.496 45.6641 93.488 42.1953L22.5181 1.22083C16.51 -2.24791 9 2.08801 9 9.02549V90.9745C9 97.912 16.51 102.248 22.5181 98.7792L93.488 57.8047ZM58.5663 51.9512C60.0683 51.084 60.0683 48.916 58.5663 48.0488L34.9097 34.3907C33.4076 33.5235 31.5301 34.6075 31.5301 36.3418V63.6582C31.5301 65.3925 33.4076 66.4765 34.9097 65.6093L58.5663 51.9512Z"
-                    fill="#FFCC00" />
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M83.9127 50.9756C84.6637 50.542 84.6637 49.458 83.9127 49.0244L21.3916 12.9278C20.6406 12.4942 19.7018 13.0362 19.7018 13.9034V86.0966C19.7018 86.9638 20.6406 87.5058 21.3916 87.0722L83.9127 50.9756ZM70.9579 51.3879C72.4599 50.5207 72.4599 48.3528 70.9579 47.4856L27.869 22.6082C26.367 21.741 24.4895 22.825 24.4895 24.5594V74.3141C24.4895 76.0485 26.367 77.1325 27.869 76.2653L70.9579 51.3879Z"
-                    fill="white" />
-            </svg>
-            <svg class="svg-pause" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path class="svg-outside-color" fill-rule="evenodd" clip-rule="evenodd"
-                    d="M55.0002 9.9095C55.0002 4.43663 59.4368 0 64.9097 0H75.0903C80.5632 0 84.9998 4.43663 84.9998 9.9095V90.0901C84.9998 95.563 80.5632 99.9996 75.0903 99.9996H64.9097C59.4368 99.9996 55.0002 95.563 55.0002 90.0901V9.9095Z"
-                    fill="#FFCC00" />
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M62 12.9871C62 9.68039 64.6806 6.99979 67.9873 6.99979H72.0127C75.3194 6.99979 78 9.68039 78 12.9871V87.0125C78 90.3192 75.3194 92.9998 72.0127 92.9998H67.9873C64.6806 92.9998 62 90.3192 62 87.0125V12.9871Z"
-                    fill="#FFFEFF" />
-                <path class="svg-outside-color" fill-rule="evenodd" clip-rule="evenodd"
-                    d="M15 9.9097C15 4.43683 19.4366 0.000198364 24.9095 0.000198364H35.0901C40.563 0.000198364 44.9996 4.43683 44.9996 9.9097V90.0903C44.9996 95.5632 40.563 99.9998 35.0901 99.9998H24.9095C19.4366 99.9998 15 95.5632 15 90.0903V9.9097Z"
-                    fill="#FFCC00" />
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M21.9998 12.9873C21.9998 9.68058 24.6804 6.99999 27.9871 6.99999H32.0125C35.3192 6.99999 37.9998 9.68058 37.9998 12.9873V87.0127C37.9998 90.3194 35.3192 93 32.0125 93H27.9871C24.6804 93 21.9998 90.3194 21.9998 87.0127V12.9873Z"
-                    fill="#FFFEFF" />
-            </svg>
-        </div>
-        <div id="Next" class="next control control-popup">
-            <svg class="svg-next" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path class="svg-outside-color"
-                    d="M90.9397 2C92.5264 2 93.8127 3.28631 93.8127 4.87305V94.8552C93.8127 96.442 92.5264 97.7283 90.9397 97.7283H72.4263C70.8396 97.7283 69.5533 96.442 69.5533 94.8552V55.5467L16.1301 91.143C14.3278 92.3439 12.0108 92.4555 10.1014 91.4333C8.19196 90.4111 7.00005 88.4211 7.00005 86.2553V12.8734C7.00005 10.7076 8.19196 8.71751 10.1014 7.69532C12.0108 6.67313 14.3278 6.7847 16.1301 7.98563L69.5533 43.582V4.87305C69.5533 3.28631 70.8396 2 72.4263 2H90.9397Z"
-                    fill="#FFCC00" />
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M87.2359 13.6399C87.2359 10.366 84.9003 7.41955 81.683 7.41955C78.4657 7.41955 76.1301 10.366 76.1301 13.6399V86.0883C76.1301 89.3622 78.4657 92.3087 81.683 92.3087C84.9003 92.3087 87.2359 89.3622 87.2359 86.0883V13.6399Z"
-                    fill="white" fill-opacity="0.941176" />
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M21.3566 71.0903C20.8843 70.8359 20.5898 70.3428 20.5898 69.8063L20.5898 29.9215C20.5898 29.3851 20.8843 28.8919 21.3566 28.6375C21.8289 28.3831 22.4027 28.4085 22.8506 28.7036L53.1203 48.646C53.5298 48.9159 53.7763 49.3735 53.7763 49.8639C53.7763 50.3544 53.5298 50.812 53.1203 51.0818L22.8506 71.0242C22.4027 71.3193 21.8289 71.3447 21.3566 71.0903Z"
-                    fill="white" fill-opacity="0.941176" />
-            </svg>
-        </div>
-        <div class="like control control-popup"></div>
-        <div class="dislike control control-popup"></div>
-    </div>
+    
     <div id="listTrack" class="modal-list-menu modal-list-menu-popup">
         <div class="track-position-top"></div>
         <div class="track-position-bottom"></div>
@@ -147,7 +166,13 @@
                     <div class="loader2"></div>
                 </div>
             </div>
-            <h2 id="AppQuestion">Reload the tab or open new?</h2>
+            <div class="question">
+                <h2 id="AppQuestion">Reload the tab or open new?</h2>
+                <div class="open-in-tab">
+                    <label id="labelOpenCurTab" for="checkboxOpenCurTab">Open in current tab?</label>
+                    <input class="switcher" type="checkbox" id="checkboxOpenCurTab">
+                </div>
+            </div>
             <div class="yes-no-new">
                 <button id="Yes" class="no-conect-btn">Yes</button>
                 <button id="New" class="no-conect-btn">New Yandex Music Tab</button>
@@ -158,8 +183,9 @@
     <script defer src="js/ExecutionDelay.js"></script>
     <script defer src="js/general-elements.js"></script>
     <script defer src="js/popup.js"></script>
-    <script defer src="js/player.js"></script>
     <script defer src="js/slider.js"></script>
+    <script defer src="js/player.js"></script>
+    <script defer src="js/translate.js"></script>
 </body>
 
 </html>
