--- a/extension/index.html
+++ b/extension/index.html
@@ -162,7 +162,7 @@
                 <div id="shortCuts" class="side ">Open keyboard shortcuts</div>
                 <div id="whatNew" class="side ">What's new?</div>
                 <div class="side ">About</div>
-                <div id="contactMe" class="side ">Contact Me</div>
+                <div id="GitHub" class="side ">GitHub</div>
                 <div class="side-help side">
                     <span id="help" class="title-help title-help-menu">Say thanks to the developer</span>
                     <div class="donate-container">
