--- a/extension/index.html
+++ b/extension/index.html
@@ -77,7 +77,8 @@
                             </div>
                             <div class="content-setting-item">
                                 <div class="input-step-content setting-item-hover">
-                                    <span id="RepeatClick">RepeatClick</span>
+                                    <input class="switcher" type="checkbox" id="checkboxRepeatClick">
+                                    <label id="RepeatClick" for="checkboxRepeatClick">RepeatClick</label>
                                     <input class="input-step" type="number" id="RepeatClickTime" value="7" min="1" max="10" />
                                 </div>
                             </div>
